fix: 清理 merge 后残留——python lint、JDK 兼容、测试 throws 适配